--- a/posts/2022-10-24-quarto-blogs/references.bib
+++ b/posts/2022-10-24-quarto-blogs/references.bib
@@ -5,14 +5,14 @@
   year = {2021}
 }
 
-@misc{hall2022
+@misc{hall2022,
   author = {Hall, Meghan},
   title = {Increasing the Flexibility and Robustness of Plots in ggplot2},
-  url = {https://meghan.rbind.io/blog/plot-robustness/}
+  url = {https://meghan.rbind.io/blog/plot-robustness/},
   year = {2022}
 }
 
-@mics{meyer202
+@mics{meyer2022,
   author = {Meyer, Cosima},
   title = {Understanding the Basics of Package Writing in R},
   url ={https://cosimameyer.com/post/understanding-the-basics-of-package-writing-in-r/},
@@ -25,5 +25,14 @@
   title = {Getting Started with {Apache} {Arrow}},
   date = {2021-11-19},
   url = {https://blog.djnavarro.net/starting-apache-arrow-in-r},
+  langid = {en}
+}
+
+@online{csik2021,
+  author = {Samantha Csik},
+  title = {Why Create Presentation Slides about Blogging When You Can
+    Just Blog about It Instead?},
+  date = {2021-09-24},
+  url = {https://samanthacsik.github.io/posts/2021-09-21-distill-blogs/},
   langid = {en}
 }
