blog post finished (I think!) will post on Monday

--- a/posts/2022-10-24-quarto-blogs/references.bib
+++ b/posts/2022-10-24-quarto-blogs/references.bib
@@ -8,15 +8,17 @@
 @misc{hall2022,
   author = {Hall, Meghan},
   title = {Increasing the Flexibility and Robustness of Plots in ggplot2},
+  date = {2022-02-22},
   url = {https://meghan.rbind.io/blog/plot-robustness/},
-  year = {2022}
+  langid = {en}
 }
 
 @mics{meyer2022,
   author = {Meyer, Cosima},
   title = {Understanding the Basics of Package Writing in R},
+  date = {2022-10-16},
   url ={https://cosimameyer.com/post/understanding-the-basics-of-package-writing-in-r/},
-  year = {2022}
+  langid = {en}
 }
 
 @online{navarro2021,
@@ -28,6 +30,15 @@
   langid = {en}
 }
 
+@online{milz2022,
+  author = {Beatriz Milz},
+  title = {Introcution to GitHub Actions to R users},
+  date = {2022-06-30},
+  url = {https://beamilz.com/posts/series-gha/2022-series-gha-1-what-is/en/},
+  langid = {en}
+}
+
+
 @online{csik2021,
   author = {Samantha Csik},
   title = {Why Create Presentation Slides about Blogging When You Can
@@ -36,3 +47,4 @@
   url = {https://samanthacsik.github.io/posts/2021-09-21-distill-blogs/},
   langid = {en}
 }
+
