--- a/posts/2022-10-24-quarto-blogs/index.qmd
+++ b/posts/2022-10-24-quarto-blogs/index.qmd
@@ -13,16 +13,29 @@ bibliography: references.bib
 citation: 
   url: https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/
 categories: [Quarto, R, MEDS]
-image: quarto.png
+image: penguins.png
 draft: true
 ---
 
-About a year ago, I wrote my first ever blog post ~ about blogging ~ and tbh I'm a *little* embarrassed that this is only my third post here (does it count that I have *ideas* for blog posts squirreled away at least?? `r fontawesome::fa("grin-beam-sweat", fill = "#64605f", a11y = "sem")`). Regardless, you should trust me[^1] when I say that blogging is a great exercise for you (to learn a new skill, to expand your professional portfolio/online profile, to connect with others) to practice as regularly as you can. Rather than repeat content here, take a peek at my [first post](https://samanthacsik.github.io/posts/2021-09-21-distill-blogs/), which touches on why you should blog and some ideas on how to structure your blog posts. And if you take just one thing away from all this, it's this tweet:
+About a year ago, I wrote my first ever blog post \~ about blogging \~ and tbh I'm a *little* embarrassed that this is only my third post here (does it count that I have *ideas* for blog posts squirreled away at least?? `r fontawesome::fa("grin-beam-sweat", fill = "#64605f", a11y = "sem")`). Regardless, you should trust me[^1] when I say that blogging is a great exercise for you (to learn a new skill, to expand your professional portfolio/online profile, to connect with others) to practice as regularly as you can. Rather than repeat content here, take a peek at my [first post](https://samanthacsik.github.io/posts/2021-09-21-distill-blogs/), which touches on why you should blog and some ideas on how to structure your blog posts. And if you take just one thing away from all this, it's this tweet:
 
 [^1]: Okay, you don't *just* have to trust me. Lots of data scientists advocate for blogging as an important skill and communication tool. Check out this [blog post](http://varianceexplained.org/r/start-blog/) by [David Robinson](https://twitter.com/drob) to start.
-  
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">When you’ve written the same code 3 times, write a function<br><br>When you’ve given the same in-person advice 3 times, write a blog post</p>&mdash; David Robinson (@drob) <a href="https://twitter.com/drob/status/928447584712253440?ref_src=twsrc%5Etfw">November 9, 2017</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+<blockquote class="twitter-tweet">
+
+<p lang="en" dir="ltr">
+
+When you've written the same code 3 times, write a function<br><br>When you've given the same in-person advice 3 times, write a blog post
+
+</p>
+
+--- David Robinson (@drob) <a href="https://twitter.com/drob/status/928447584712253440?ref_src=twsrc%5Etfw">November 9, 2017</a>
+
+</blockquote>
+
+```{=html}
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+```
 ## I. Before we chat about blogs...
 
 Our [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) (MEDS) students created the bones of their Quarto websites a few months ago, and more recently took a little dive into website customization using Sass & CSS. For anyone who's looking to get started on their website-building journey, feel free to explore the following resources:
@@ -53,17 +66,21 @@ A Quarto Blog is *a type* of Quarto Website -- according to the Quarto documenta
 
 TL;DR: A couple of steps are required for setting up your blog, but generally speaking, you'll need:
 
-`r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` a folder (i.e. subdirectory) to hold all of your individual blog posts -- I called my folder `posts` (though the name is up to you). I also (optionally) added a `_metadata.yml` file to this folder which includes some formatting and configuration options that will apply to *all* blog posts in this folder   
+`r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` a folder (i.e. subdirectory) to hold all of your individual blog posts -- I called my folder `posts` (though the name is up to you). I also (optionally) added a `_metadata.yml` file to this folder which includes some formatting and configuration options that will apply to *all* blog posts in this folder
 
-`r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` a listing page, which lists all of your blog posts for viewers to browse and click through -- this is a `.qmd` file that you'll add to your website's navbar by including it in `_quarto.yml`   
+`r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` a listing page, which lists all of your blog posts for viewers to browse and click through -- this is a `.qmd` file that you'll add to your website's navbar by including it in `_quarto.yml`
 
 `r fontawesome::fa("angle-right", fill = "#64605f", a11y = "sem")` blog posts! Your listing page will be blank until you actually add your first blog post
 
 Let's create those together now.
 
-1. **Create a `/posts` folder:** Open up your Quarto website project (I find it easiest to do this in RStudio) and make sure you're in your root directory. Here, we'll create a new subdirectory, called `posts` (you can call this whatever you want), where all of our blog posts will eventually live. To do so, you can either (a) click on the **add folder** button, <img src="media/add-folder.png" alt="" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, in the Files pane, or (b) in the RStudio Terminal, run `mkdir posts`. 
+1.  **Create a `/posts` folder:** Open up your Quarto website project (I find it easiest to do this in RStudio) and make sure you're in your root directory. Here, we'll create a new subdirectory, called `posts` (you can call this whatever you want), where all of our blog posts will eventually live. To do so, you can either (a) click on the **add folder** button, <img src="media/add-folder.png" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, in the Files pane, or (b) in the RStudio Terminal, run `mkdir posts`.
 
-2. ***Optional:* Add a `_metadata.yml` file to `/posts`:** While not required, a `_metadata.yml` file can make your life easier if you want certain options to apply to all blog posts that you create. In the RStudio Terminal, run `cd posts` to move into that directory, then `touch _metadata.yml` to create the file. Open your `_metadata.yml` in the Source pane to add options. I like these options[^2], but it's entirely up to you what you want to include (if anything at all): 
+2.  ***Optional:*** **Add a `_metadata.yml` file to `/posts`:** While not required, a `_metadata.yml` file can make your life easier if you want certain options to apply to all blog posts that you create. In the RStudio Terminal, run `cd posts` to move into that directory, then `touch _metadata.yml` to create the file. Open your `_metadata.yml` in the Source pane to add options. I like these options[^2], but it's entirely up to you what you want to include (if anything at all):
+
+[^2]: **The `freeze` option:** Setting this option to `auto` will *only* re-render posts when you make updates to the source files (as opposed to re-rendering them each time you **Render Website** -- this can save time, particularly if you have computationally-heavy content in your blog posts). If you set this option to `true`, posts will *never* be re-rendered (even if you've made changes to the source files). If you use this option, you'll need to **Render** individual posts whenever you make changes to their source files *before* you **Render Website**, otherwise your updates will not appear.
+
+    The `title-block-banner` option: Setting this option to `true` will enable a [banner style title block](https://quarto.org/docs/authoring/title-blocks.html#title-banners) (where the title, subtitle, description, and categories are all positioned inside the banner) for all posts.
 
 ```{r}
 #| eval: false
@@ -71,42 +88,38 @@ Let's create those together now.
 
 # options specified here will apply to all posts in this folder
 
-# re-render posts only when source changes (for more, see https://quarto.org/docs/projects/code-execution.html#freeze)
-freeze: auto
+# prevents posts from re-rendering unless explicitly told to do so (for more, see https://quarto.org/docs/projects/code-execution.html#freeze)
+freeze: true
 
 # enable banner style title blocks (see https://quarto.org/docs/authoring/title-blocks.html)
 title-block-banner: true
 ```
 
-[^2]: **The `freeze` option:** Setting this option to `auto` will *only* re-render posts when you make updates to the source files (as opposed to re-rendering them each time you **Render Website** -- this can save time, particularly if you have computationally-heavy content in your blog posts). If you set this option to `true`, posts will *never* be re-rendered (even if you've made changes to the source files). If you use this option, you'll need to **Render** individual posts whenever you make changes to their source files *before* you **Render Website**, otherwise your updates will not appear. 
-
-    The `title-block-banner` option: Setting this option to `true` will enable a [banner style title block](https://quarto.org/docs/authoring/title-blocks.html#title-banners) (where the title, subtitle, description, and categories are all positioned inside the banner) for all posts. 
-
-3. **Create a [listing page](https://quarto.org/docs/websites/website-listings.html):** A listing page is a page with content that is automatically generated from a list of documents -- in this case, that would be a list of blog posts -- and looks something like this (or check out my blog's listing page [here](https://samanthacsik.github.io/posts.html)):
+3.  **Create a [listing page](https://quarto.org/docs/websites/website-listings.html):** A listing page is a page with content that is automatically generated from a list of documents -- in this case, that would be a list of blog posts -- and looks something like this (or check out my blog's listing page [here](https://samanthacsik.github.io/posts.html)):
 
 ```{r}
 #| eval: true
 #| echo: false
-#| fig-cap: "The [MEDS Community Blog](https://ucsb-meds.github.io/blog.html) listing page, with multiple blog posts arranged in the default-style layout -- Quarto has multiple listing page layout options (more on that to come)"
+#| fig-cap: "The [MEDS Community Blog](https://ucsb-meds.github.io/blog.html) listing page, with multiple blog posts arranged in the default-style layout -- Quarto has multiple listing page layout options (default, grid, table) for you to explore"
 knitr::include_graphics("media/listing-page.png")
 ```
 
-- To create a listing page, add a `posts.qmd` file to your *root* directory. First, click on the R Project icon, <img src="media/rproj.png" alt="" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, in the Files pane to jump back to your project's root directory. There are a bunch of ways to create a new `.qmd` file, but one easy way is to choose *File* > *New File* > *Quarto Document...*. Below, I give mine the title "My Blog" when prompted (this name appears at the top of your listing page), then saved it as `posts.qmd` (but you can choose whatever title and/or file name you'd like).
+-   To create a listing page, add a `posts.qmd` file to your *root* directory. First, click on the R Project icon, <img src="media/rproj.png" style="display: inline-block; margin: 0; position: relative; top: 2px; width:20px;height:20px;"/>, in the Files pane to jump back to your project's root directory. There are a bunch of ways to create a new `.qmd` file, but one easy way is to choose *File* \> *New File* \> *Quarto Document...*. Below, I give mine the title "My Blog" when prompted (this name appears at the top of your listing page), then saved it as `posts.qmd` (but you can choose whatever title and/or file name you'd like).
 
-4. **Configure your listing page:** Specify how you'd like your listing page to be arranged by updating the YAML section of `posts.qmd`. There are a variety of options that you can specify. Below are just a few, but check out other options [here](https://quarto.org/docs/websites/website-listings.html):
+4.  **Configure your listing page:** Specify how you'd like your listing page to be arranged by updating the YAML section of `posts.qmd`. There are a variety of options that you can specify. Below are just a few, but check out other options [here](https://quarto.org/docs/websites/website-listings.html):
 
 ```{r}
 #| eval: false
 #| echo: true
 title: "My Blog"
 listing: 
-  contents: posts # includes all Quarto docs in the `posts` directory
+  contents: posts # all Quarto docs in the `posts` directory will be included on your listing page
   type: grid # or `default` or `table`; each type has its own set of yaml options to include
   sort: "date desc" # can also sort on more than one field
   categories: true # allows you to sort posts by assigned categories 
 ```
 
-5. **Add your listing page to your website's navbar:** Update `_quarto.yml` with your new listing page to add it to your site's navbar:
+5.  **Add your listing page to your website's navbar:** Update `_quarto.yml` with your new listing page to add it to your site's navbar:
 
 ```{r}
 #| eval: false
@@ -123,7 +136,7 @@ website:
       - posts.qmd # add your posts.qmd file to your navbar!
 ```
 
-6. **Preview or Render your website:** Make sure your listing page shows up by previewing or rendering your website (you can do either of these from the **Build** tab in RStudio. You should have something that looks like this (we haven't created any posts yet, so it'll be empty for now):
+6.  **Preview or Render your website:** Make sure your listing page shows up by previewing or rendering your website (you can do either of these from the **Build** tab in RStudio. You should have something that looks like this (we haven't created any posts yet, so it'll be empty for now):
 
 ```{r}
 #| eval: true
@@ -135,11 +148,11 @@ knitr::include_graphics("media/blog-added.png")
 
 Now that you have your listing page set up, we can start populating it with blog posts. Repeat the following steps each time you want to add a new post.
 
-1. **Create a subdirectory *inside* your `posts` directory:** To stay organized, I usually name mine `YYYY-MM-DD-short-post-description`. This folder name will also become the [slug](https://developer.mozilla.org/en-US/docs/Glossary/Slug) for your published post.
+1.  **Create a subdirectory *inside* your `posts` directory:** To stay organized, I usually name mine `YYYY-MM-DD-short-post-description`. This folder name will also become the [slug](https://developer.mozilla.org/en-US/docs/Glossary/Slug) for your published post.
 
-2. **Inside your new subdirectory, create an `index.qmd` file.** The name here is important! It *must* be called `index.qmd`. Your file path should look something like this: `mywebsite/posts/2022-10-24-my-blog-post/index.qmd`.
+2.  **Inside your new subdirectory, create an `index.qmd` file.** The name here is important! It *must* be called `index.qmd`. Your file path should look something like this: `mywebsite/posts/2022-10-24-my-blog-post/index.qmd`. This file is your blog post. Write all your content here!
 
-3. **Configure your blog post:** You can add a variety of different options to the YAML section of `index.qmd`. Here are my go-to options:
+3.  **Configure your blog post:** You can add a variety of different options to the YAML section of `index.qmd`. Here are my go-to options:
 
 ```{r}
 #| eval: false
@@ -162,19 +175,19 @@ draft: false # setting this to `true` will prevent your post from appearing on y
 ---
 ```
 
-Some notes on the above options: 
+Some notes on the above options:
 
-- You should include a *title*, but don't necessarily need a *description* (although I think they're nice to have!). Both of these fields will appear on your listing page.
+-   You should include a *title*, but don't necessarily need a *description* (although I think they're nice to have!). Both of these fields will appear on your listing page.
 
-- You can include more than one *author* -- see [this post](https://samanthacsik.github.io/posts/2022-06-22-hello_quarto/) and [source code](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-06-22-hello_quarto/index.qmd) as an example.
+-   You can include more than one *author* -- see [this post](https://samanthacsik.github.io/posts/2022-06-22-hello_quarto/) and [source code](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-06-22-hello_quarto/index.qmd) as an example.
 
-- You may include as many self-defined *categories* as you'd like. Make sure that your spelling/capitalization/punctuation is consistent across blog posts should you apply the same categories to multiple posts.
+-   You may include as many self-defined *categories* as you'd like. Make sure that your spelling/capitalization/punctuation is consistent across blog posts should you apply the same categories to multiple posts.
 
-- Adding the *citation* option automatically generates both a [BibTeX citation](https://en.wikipedia.org/wiki/BibTeX) and reference for your blog post, and adds them to the bottom of your post.
+-   Adding the *citation* option automatically generates both a [BibTeX citation](https://en.wikipedia.org/wiki/BibTeX) and reference for your blog post, and adds them to the bottom of your post.
 
-- Include an image (or gif) to add as a *preview image*, which will appear on your listing page alongside your post. Your image should live inside your post's subdirectory (e.g. `mywebsite/posts/2022-10-24-my-blog-post/preview-image.png`).
+-   Include an image (or gif) to add as a *preview image*, which will appear on your listing page alongside your post. Your image should live inside your post's subdirectory (e.g. `mywebsite/posts/2022-10-24-my-blog-post/preview-image.png`).
 
-- Set `draft: true` while you're still working on your blog post to prevent it from showing up on your listing page, site map, or site search. When you're ready to publish, just remove `draft: true` from your YAML (or set to `false`) then render your post.
+-   Set `draft: true` while you're still working on your blog post to prevent it from showing up on your listing page, site map, or site search. When you're ready to publish, just remove `draft: true` from your YAML (or set to `false`) then render your post.
 
 ```{r}
 #| eval: true
@@ -199,13 +212,13 @@ knitr::include_graphics("media/repo.png")
 
 ## V. Some additional authoring features to explore
 
-Blog posts are just Quarto documents, meaning you can combine prose, code, and embedded outputs all in one place, just like you would in any other `.qmd` file (which makes your blog the *perfect* place to create data science/programming tutorials both for yourself and others `r fontawesome::fa("smile-wink", fill = "#64605f", a11y = "sem")`). If you're looking for additional ways to enhance your posts, read on below: :
+Blog posts are just Quarto documents, meaning you can combine prose, code, and embedded outputs all in one place, just like you would in any other `.qmd` file (which makes your blog the *perfect* place to create data science/programming tutorials both for yourself and others `r fontawesome::fa("smile-wink", fill = "#64605f", a11y = "sem")`). If you're looking for additional ways to enhance your posts, read on below:
 
 #### Adding footnotes
 
 There are multiple ways to include footnotes throughout your blog posts:
 
-1. Use the `[^#]` syntax to denote where you would like a note to be inserted. Write your note somewhere below following the `[^#]: your note here` syntax. For example:
+1.  Use the `[^#]` syntax to denote where you would like a note to be inserted. Write your note somewhere below following the `[^#]: your note here` syntax. For example:
 
 ```{markdown}
 I am going to insert a footnote here[^1].
@@ -213,13 +226,13 @@ I am going to insert a footnote here[^1].
 [^1]: Here is the associated footnote, which will appear at the bottom of my document in a "Footnotes" section.
 ```
 
-2. Alternatively, you can write your notes inline to avoid having to use identifiers (e.g. `[^#]`). For example:
+2.  Alternatively, you can write your notes inline to avoid having to use identifiers (e.g. `[^#]`). For example:
 
 ```{markdown}
 I am going to insert an inline footnote here^[Here is my inline footnote].
 ```
 
-3. You can also add footnotes that include multiple paragraphs. See the [source code](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/index.qmd) for this blog post and take a peek at footnote #2 for an example on how to do so (or check out the [Quarto documentation](https://quarto.org/docs/authoring/footnotes-and-citations.html#footnotes)).
+3.  You can also add footnotes that include multiple paragraphs. See the [source code](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/index.qmd) for this blog post and take a peek at footnote #2 for an example on how to do so (or check out the [Quarto documentation](https://quarto.org/docs/authoring/footnotes-and-citations.html#footnotes)).
 
 All footnotes will appear in a "Footnotes" section that is automatically generated for you.
 
@@ -227,9 +240,9 @@ All footnotes will appear in a "Footnotes" section that is automatically generat
 
 Quarto supports the use of bibliography files for citing works throughout your blog post. There are a number of ways to do this, but so far, I've found creating a BibLaTex database to be relatively straightforward. This database takes the form of a plain-text `.bib` file where we can store all of our bibliographic information. That information needs to be encoded in a particular way (more on that below). Follow these steps to cite works in your blog posts:
 
-1. First, create a `.bib` file in the folder containing your blog post (e.g. `mywebsite/posts/2022-10-24-my-blog-post/references.bib`) using the `touch` command in your RStudio Terminal. I called mine `references.bib`, but the name is up to you. 
+1.  First, create a `.bib` file in the folder containing your blog post (e.g. `mywebsite/posts/2022-10-24-my-blog-post/references.bib`) using the `touch` command in your RStudio Terminal. I called mine `references.bib`, but the name is up to you.
 
-2. To use your `references.bib` file, you'll need to add the `bibliography` option to your blog post's YAML:
+2.  To use your `references.bib` file, you'll need to add the `bibliography` option to your blog post's YAML:
 
 ```{r}
 #| eval: false
@@ -242,7 +255,7 @@ bibliography: references.bib
 ---
 ```
 
-3. Next, we'll want to add some references. These take a particular format that generally looks like this:
+3.  Next, we'll want to add some references. These take a particular format that generally looks like this (the number/types of fields included may vary):
 
 ```{r}
 #| eval: false
@@ -250,18 +263,19 @@ bibliography: references.bib
 @type{key,
   author = {LastName, FirstName},
   title = {Title of work},
+  date = {YYYY}
   url = {https://url.com},
-  year = {YYYY}
+  langid = {en}
 }
 ```
 
 where `type` can be `manual`, `book`, `article`, `misc`, etc. (all case-insensitive) and `key` is the citation identifier used for inserting in-text citations (we'll get there soon).
 
-- There may be instances where you want to cite a resource that already has a BibTex citation available for you to copy over to your `references.bib` file (e.g. this blog post). For most resources, however, you'll need to construct your own. You can do this manually, or with the help of a BibTeX reference generator (Googling will yield plenty of options, but [zoterobib](https://zbib.org/) is a great place to start, but note that you may have to make some manual adjustments). Check out my [`references.bib` file](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/references.bib) for this post as an example.
+-   There may be instances where you want to cite a resource that already has a BibTex citation available for you to copy over to your `references.bib` file (e.g. this blog post). For most resources, however, you'll need to construct your own. You can do this manually, or with the help of a BibTeX reference generator (Googling will yield plenty of options, but [zoterobib](https://zbib.org/) is a great place to start. Note that you may have to make some manual adjustments). Check out my [`references.bib` file](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/references.bib) for this post as an example.
 
-4. Now that you have BibTex references in your `.bib` file, you can start adding in-text citations. These generally take the form `[@key]` (but read more about Quarto citation syntax [here](https://quarto.org/docs/authoring/footnotes-and-citations.html#sec-citations)). When you add an in-text citation, Quarto will automatically add the reference to the bottom of your blog post under the "References" section.
+4.  Now that you have BibTex references in your `.bib` file, you can start adding in-text citations. These generally take the form `[@key]` (but read more about Quarto citation syntax [here](https://quarto.org/docs/authoring/footnotes-and-citations.html#sec-citations)). When you add an in-text citation, Quarto will automatically add the reference to the bottom of your blog post under the "References" section.
 
-- To give one final concrete example, let's say I want to cite my first (ever) blog post from last year. I can copy the BibTeX citation from the bottom of the post and paste it into my `references.bib` file:
+-   To give one final concrete example, let's say I want to cite my first (ever) blog post from last year. I can copy the BibTeX citation from the bottom of the post and paste it into my `references.bib` file:
 
 ```{r}
 #| eval: false
@@ -276,26 +290,49 @@ where `type` can be `manual`, `book`, `article`, `misc`, etc. (all case-insensit
 }
 ```
 
-- I can now add an in-text citation using the `[@csik2021]` syntax here [@csik2021] -- once cited, it will appear in my References section at the bottom of this post. 
+-   I can now add an in-text citation using the `[@csik2021]` syntax here `r fontawesome::fa("arrow-right", fill = "#64605f", a11y = "sem")` [@csik2021]. Once cited, it will appear in my References section at the bottom of this post.
+
+That wasn't so bad, right?? What if I told you there was an even *easier* way to add citations....Start by popping over to RStudio's Visual editor, if you're not already there (you should see buttons for working in either the **Source** or **Visual** editor in the top left corner of your source pane), and follow the steps below:
+
+1.  Place your cursor where you'd like to insert a citation, then from the **Insert** drop down menu, select **Citation**.
+
+2.  A new window will pop open with a number of different options for inserting citations. If you've already created a `references.bib` file, it will appear under the **My Sources** and **Bibliography** sections. You can choose any of your existing references to insert an in-text citation from *or* choose another option, like inserting a citation based on a DOI (!!! I can't tell you how awesome I think this is !!!). Once you add an in-text citation based on a DOI, the BibTeX reference will automatically be added to your `references.bib` file, as well as to your references list at the bottom of your post. If you don't yet have a `references.bib` file, one will automatically be generated for you. LIKE SERIOUSLY?? SO FREAKIN COOL.
+
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: center
+knitr::include_graphics("media/citations.png")
+```
+
+Okay, back to being chill...
 
 #### Article layout
 
-Quarto also supports a number of different [page layout options](https://quarto.org/docs/authoring/article-layout.html) to further customize the appearance of your posts. Explore different ways to position elements on your page, including embedding outputs, captions, references in your [page margin](https://quarto.org/docs/authoring/article-layout.html#margin-content).
+Quarto also supports a number of different [page layout options](https://quarto.org/docs/authoring/article-layout.html) to further customize the appearance of your posts. Explore different ways to position elements on your page, including embedding outputs, captions, references in your [page margin](https://quarto.org/docs/authoring/article-layout.html#margin-content) (one of my personal faves...despite the fact that I don't have any here in this post).
 
-## VI. Blogs to follow (+ one post from each that I've particularly enjoyed)
+## VI. A note on adding an additional blog (or more) to your site
+
+You aren't limited to just one blog/listing page! Repeat [Part III](https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/#iii.-adding-a-blog-to-your-personal-quarto-website) to add a second listing page + content to your website. My personal website contains two blogs -- one called [posts](https://samanthacsik.github.io/posts.html) and another called [talks & workshops](https://samanthacsik.github.io/talks_workshops.html). Explore the [GitHub repo](https://github.com/samanthacsik/samanthacsik.github.io) to take a peek at the file structure and source code.
+
+## VII. Blogs to follow (+ one post from each that I've particularly enjoyed)
 
 There are *tons* of awesome data science bloggers out there, and (at the cost of sounding like a broken record) Twitter is a great place to find them. Here are just a few I've been reading and enjoying as of late, but get out there and start exploring others for yourself!
 
-* [Piping Hot Data](https://www.pipinghotdata.com/blog.html), by Shannon Pileggi -- find her on `r fontawesome::fa("twitter", fill = "#64605f", a11y = "sem")` [`@PipingHotData`](https://twitter.com/PipingHotData) and check out her post, [Curating for `@WeAreRLadies` on Twitter](https://www.pipinghotdata.com/posts/2021-09-23-curating-for-wearerladies-on-twitter/) [-@pileggi2021curating]
+*Also note: I've added citations for each of these blog posts. Check out the [source code](https://github.com/samanthacsik/samanthacsik.github.io/blob/main/posts/2022-10-24-quarto-blogs/index.qmd) if you're looking for additional examples on how to do it.*
 
-* [Meghan Hall's Blog](https://meghan.rbind.io/blog/) -- find her on `r fontawesome::fa("twitter", fill = "#64605f", a11y = "sem")` [`@MeghanMHall`](https://twitter.com/MeghanMHall) and check out her post, [Increasing the Flexibility and Robustness of Plots in ggplot2
-](https://meghan.rbind.io/blog/plot-robustness/) [-@hall2022]
+-   [Piping Hot Data](https://www.pipinghotdata.com/blog.html), by Shannon Pileggi -- find her on `r fontawesome::fa("twitter", fill = "#64605f", a11y = "sem")` [`@PipingHotData`](https://twitter.com/PipingHotData) and check out her post, [Curating for `@WeAreRLadies` on Twitter](https://www.pipinghotdata.com/posts/2021-09-23-curating-for-wearerladies-on-twitter/) [-@pileggi2021curating]
 
-* [Cosima Meyer's Blog](https://cosimameyer.com/#post) -- find her on `r fontawesome::fa("twitter", fill = "#64605f", a11y = "sem")` [`@cosima_meyer`](https://twitter.com/cosima_meyer) and check out her post, [Understanding the Basics of Package Writing in R](https://cosimameyer.com/post/understanding-the-basics-of-package-writing-in-r/) [-@meyer2022]
+-   [Meghan Hall's Blog](https://meghan.rbind.io/blog/) -- find her on `r fontawesome::fa("twitter", fill = "#64605f", a11y = "sem")` [`@MeghanMHall`](https://twitter.com/MeghanMHall) and check out her post, [Increasing the Flexibility and Robustness of Plots in ggplot2](https://meghan.rbind.io/blog/plot-robustness/) [-@hall2022]
 
-* [Notes from a Data Witch](https://blog.djnavarro.net/) by Danielle Navarro -- find her on `r fontawesome::fa("twitter", fill = "#64605f", a11y = "sem")` [`@djnavarro`](https://twitter.com/djnavarro) and check out her post, [Getting started with Apache Arrow](https://blog.djnavarro.net/posts/2021-11-19_starting-apache-arrow-in-r/) [-@navarro2021]
+-   [Cosima Meyer's Blog](https://cosimameyer.com/#post) -- find her on `r fontawesome::fa("twitter", fill = "#64605f", a11y = "sem")` [`@cosima_meyer`](https://twitter.com/cosima_meyer) and check out her post, [Understanding the Basics of Package Writing in R](https://cosimameyer.com/post/understanding-the-basics-of-package-writing-in-r/) [-@meyer2022]
 
-## VII. Additional Resources
+-   [Notes from a Data Witch](https://blog.djnavarro.net/) by Danielle Navarro -- find her on `r fontawesome::fa("twitter", fill = "#64605f", a11y = "sem")` [`@djnavarro`](https://twitter.com/djnavarro) and check out her post, [Getting started with Apache Arrow](https://blog.djnavarro.net/posts/2021-11-19_starting-apache-arrow-in-r/) [-@navarro2021]
 
-* [The ultimate guide to starting a Quarto blog](https://albert-rapp.de/posts/13_quarto_blog_writing_guide/13_quarto_blog_writing_guide.html), by [Albert Rapp](https://albert-rapp.de/) is incredibly thorough and explores even more ways to customize your blog. Check it out!
+-   [Beatriz Milz's Blog](https://beamilz.com/posts/) -- find her on `r fontawesome::fa("twitter", fill = "#64605f", a11y = "sem")` [`@BeaMilz`](https://twitter.com/BeaMilz) and check out her post, [Introduction to GitHub Actions for R users](https://beamilz.com/posts/series-gha/2022-series-gha-1-what-is/en/) [-@milz2022]
 
+## VIII. Additional Resources
+
+-   [The ultimate guide to starting a Quarto blog](https://albert-rapp.de/posts/13_quarto_blog_writing_guide/13_quarto_blog_writing_guide.html), by [Albert Rapp](https://albert-rapp.de/) is incredibly thorough and explores even more ways to customize your blog. Check it out!
+
+-  [Creating a blog with Quarto in 10 steps](https://beamilz.com/posts/2022-06-05-creating-a-blog-with-quarto/en/), by [Beatriz Milz](https://beamilz.com/about.html) walks through the steps of setting up a new Quarto Blog project. She also details how to set up [giscus](https://giscus.app/) to enable comments on your blog posts, which is something I've been eager to try myself!
