--- a/posts/2022-10-24-quarto-blogs/index.qmd
+++ b/posts/2022-10-24-quarto-blogs/index.qmd
@@ -14,10 +14,10 @@ citation:
   url: https://samanthacsik.github.io/posts/2022-10-24-quarto-blogs/
 categories: [Quarto, R, MEDS]
 image: penguins.png
-draft: true
+draft: false
 ---
 
-About a year ago, I wrote my first ever blog post \~ about blogging \~ and tbh I'm a *little* embarrassed that this is only my third post here (does it count that I have *ideas* for blog posts squirreled away at least?? `r fontawesome::fa("grin-beam-sweat", fill = "#64605f", a11y = "sem")`). Regardless, you should trust me[^1] when I say that blogging is a great exercise for you (to learn a new skill, to expand your professional portfolio/online profile, to connect with others) to practice as regularly as you can. Rather than repeat content here, take a peek at my [first post](https://samanthacsik.github.io/posts/2021-09-21-distill-blogs/), which touches on why you should blog and some ideas on how to structure your blog posts. And if you take just one thing away from all this, it's this tweet:
+About a year ago, I wrote my first ever blog post \~ about blogging \~ and tbh I'm a *little* embarrassed that this is only my third post here (does it count that I have *ideas* for blog posts squirreled away at least?? `r fontawesome::fa("grin-beam-sweat", fill = "#64605f", a11y = "sem")`). Regardless, you should trust me[^1] when I say that blogging is a great exercise for you to practice as regularly as you can -- it can help you learn a new skill, expand your professional portfolio/online profile, connect with others in your field, and more. Rather than repeat content here, take a peek at my [first post](https://samanthacsik.github.io/posts/2021-09-21-distill-blogs/), which touches on why you should blog and some ideas on how to structure your blog posts. And if you take just one thing away from all this, it's this tweet:
 
 [^1]: Okay, you don't *just* have to trust me. Lots of data scientists advocate for blogging as an important skill and communication tool. Check out this [blog post](http://varianceexplained.org/r/start-blog/) by [David Robinson](https://twitter.com/drob) to start.
 
