--- a/talks_workshops/2019-05-15-intro-to-the-tidyverse/index.qmd
+++ b/talks_workshops/2019-05-15-intro-to-the-tidyverse/index.qmd
@@ -30,16 +30,16 @@ knitr::include_graphics("sam_an.jpg")
 
 <div class="container">
 <div class="center">
-<button type="button" class="button-styling" onclick=window.location.href='https://rpubs.com/scsik/RladiesSB-intro-to-the-tidyverse'>`r fontawesome::fa("markdown", fill = "#64605f", a11y = "sem")` knitted html</button>
-<button type="button" class="button-styling" onclick=window.location.href='https://github.com/samanthacsik/Intro-to-the-Tidyverse'>`r fontawesome::fa("github-square", fill = "#64605f", a11y = "sem")` source code</button> 
-<button type="button" class="button-styling" onclick=window.location.href='https://www.meetup.com/rladies-santa-barbara/events/260710376/'>`r fontawesome::fa("meetup", fill = "#64605f", a11y = "sem")` meetup event</button> 
+<button type="button" class="button-styling" onclick=window.location.href='https://rpubs.com/scsik/RladiesSB-intro-to-the-tidyverse'>{{< fa file-alt title="A file with lines of text" >}} instructional documentation</button>
+<button type="button" class="button-styling" onclick=window.location.href='https://github.com/samanthacsik/Intro-to-the-Tidyverse'>{{< fa code title="A symbol for code, </>" >}} source code</button> 
+<!-- <button type="button" class="button-styling" onclick=window.location.href='https://www.meetup.com/rladies-santa-barbara/events/260710376/'>`r fontawesome::fa("meetup", fill = "#64605f", a11y = "sem")` meetup event</button>  -->
 </div>
 </div>
 
 
 # Overview
 
-My *very first time* (co)leading an R-based live-coding workshop(!) and the experience that got me hooked on teaching RStats/data science 💜, given to [R-Ladies Santa Barbara](https://www.meetup.com/rladies-santa-barbara/).
+My *very first time* (co)leading an R-based live-coding workshop(!) and the experience that got me hooked on teaching RStats/data science 💜, given to [R-Ladies Santa Barbara](https://www.meetup.com/rladies-santa-barbara/events/260710376/).
 
 # Abstract 
 
