--- a/talks_workshops/2020-08-19-data-viz-with-ggplot2/index.qmd
+++ b/talks_workshops/2020-08-19-data-viz-with-ggplot2/index.qmd
@@ -33,15 +33,15 @@ knitr::include_graphics("plots.png")
 
 <div class="container">
 <div class="center">
-<button type="button" class="button-styling" onclick=window.location.href='https://docs.google.com/presentation/d/1sU2H89F5e409WpYilRqYAqu7DdXSAivccEa4y44xZ7c/edit?usp=sharing'>`r fontawesome::fa("tv", fill = "#64605f", a11y = "sem")` slides</button>
-<button type="button" class="button-styling" onclick=window.location.href='https://github.com/j-verstaen/RLadiesSB-Data-Viz-Pt1'>`r fontawesome::fa("github-square", fill = "#64605f", a11y = "sem")` source code</button> 
-<button type="button" class="button-styling" onclick=window.location.href='https://www.meetup.com/rladies-santa-barbara/events/272478115/'>`r fontawesome::fa("meetup", fill = "#64605f", a11y = "sem")` meetup events</button> 
+<button type="button" class="button-styling" onclick=window.location.href='https://docs.google.com/presentation/d/1sU2H89F5e409WpYilRqYAqu7DdXSAivccEa4y44xZ7c/edit?usp=sharing'>{{< fa tv title="A television screen" >}} slides</button>
+<button type="button" class="button-styling" onclick=window.location.href='https://github.com/j-verstaen/RLadiesSB-Data-Viz-Pt1'>{{< fa code title="A symbol for code, </>" >}} source code</button> 
+<!-- <button type="button" class="button-styling" onclick=window.location.href='https://www.meetup.com/rladies-santa-barbara/events/272478115/'>`r fontawesome::fa("meetup", fill = "#64605f", a11y = "sem")` meetup events</button>  -->
 </div>
 </div>
 
 # Overview
 
-This live-coding workshop was given to [R-Ladies Santa Barbara](https://www.meetup.com/rladies-santa-barbara/) via Zoom.
+This live-coding workshop was given to [R-Ladies Santa Barbara](https://www.meetup.com/rladies-santa-barbara/events/272478115/) via Zoom.
 
 # Abstract 
 
