--- a/talks_workshops/2021-10-11-teach-me-how-to-google/index.qmd
+++ b/talks_workshops/2021-10-11-teach-me-how-to-google/index.qmd
@@ -26,10 +26,10 @@ xaringanExtra::embed_xaringan(
 
 <div class="container">
 <div class="center">
-<button type="button" class="button-styling" onclick=window.location.href='https://ucsb-meds.github.io/teach-me-how-to-google/#1'>`r fontawesome::fa("tv", fill = "#64605f", a11y = "sem")` slides</button>
-<button type="button" class="button-styling" onclick=window.location.href='https://github.com/UCSB-MEDS/teach-me-how-to-google'>`r fontawesome::fa("github-square", fill = "#64605f", a11y = "sem")` source code</button> 
-<button type="button" class="button-styling" onclick=window.location.href='https://samanthacsik.github.io/teach-me-how-to-google/'>`r fontawesome::fa("plus", fill = "#64605f", a11y = "sem")` invited talks</button> 
-<button type="button" class="button-styling" onclick=window.location.href='https://drive.google.com/file/d/1eAluhmkL3PBvhYXzQ5T6X6TOO1pQStSQ/view'>`r fontawesome::fa("video", fill = "#64605f", a11y = "sem")` recording</button> 
+<button type="button" class="button-styling" onclick=window.location.href='https://ucsb-meds.github.io/teach-me-how-to-google/#1'>{{< fa tv title="A television screen" >}} slides</button>
+<button type="button" class="button-styling" onclick=window.location.href='https://github.com/UCSB-MEDS/teach-me-how-to-google'>{{< fa code title="A symbol for code, </>" >}} source code</button> 
+<!-- <button type="button" class="button-styling" onclick=window.location.href='https://samanthacsik.github.io/teach-me-how-to-google/'>`r fontawesome::fa("plus", fill = "#64605f", a11y = "sem")` invited talks</button>  -->
+<button type="button" class="button-styling" onclick=window.location.href='https://drive.google.com/file/d/1eAluhmkL3PBvhYXzQ5T6X6TOO1pQStSQ/view'>{{< fa video title="A video camera" >}} recording</button> 
 </div>
 </div>
 
@@ -42,3 +42,7 @@ It's since been given to students from UCSB's [Master of Technology Management P
 # Abstract
 
 Googling for code help is something that all data scientists (at all career stages) do. But figuring out how to get the information you need back can be incredibly challenging, particularly for new coders. In this workshop, we’ll discuss strategies for refining your queries to increase your chances of finding informative solutions.
+
+# Additional versions
+
+I've given this talk to a number of different (non-MEDS) audiences. Most times, the slides remain unchanged (aside from an updated title slide), but there are minor differences here and there depending on audience needs/experiences. Find all additional talk versions [here](https://samanthacsik.github.io/teach-me-how-to-google/)!
