--- a/talks_workshops/2022-02-18-intro-to-shiny/index.qmd
+++ b/talks_workshops/2022-02-18-intro-to-shiny/index.qmd
@@ -27,8 +27,8 @@ xaringanExtra::embed_xaringan(
 
 <div class="container">
 <div class="center">
-<button type="button" class="button-styling" onclick=window.location.href='https://ucsb-meds.github.io/shiny-workshop/#1'>`r fontawesome::fa("tv", fill = "#64605f", a11y = "sem")` slides</button>
-<button type="button" class="button-styling" onclick=window.location.href='https://github.com/UCSB-MEDS/shiny-workshop'>`r fontawesome::fa("github-square", fill = "#64605f", a11y = "sem")` source code</button> 
+<button type="button" class="button-styling" onclick=window.location.href='https://ucsb-meds.github.io/shiny-workshop/#1'>{{< fa tv title="A television screen" >}} slides</button>
+<button type="button" class="button-styling" onclick=window.location.href='https://github.com/UCSB-MEDS/shiny-workshop'>{{< fa code title="A symbol for code, </>" >}} source code</button> 
 </div>
 </div>
 
