--- a/talks_workshops/2022-10-10-customizing-quarto-websites/index.qmd
+++ b/talks_workshops/2022-10-10-customizing-quarto-websites/index.qmd
@@ -18,8 +18,8 @@ image: sass_css.png
 
 <div class="container">
 <div class="center">
-<button type="button" class="button-styling" onclick=window.location.href='https://ucsb-meds.github.io/customizing-quarto-websites/#/title-slide'>`r fontawesome::fa("tv", fill = "#64605f", a11y = "sem")` slides</button>
-<button type="button" class="button-styling" onclick=window.location.href='https://github.com/UCSB-MEDS/customizing-quarto-websites'>`r fontawesome::fa("github-square", fill = "#64605f", a11y = "sem")` source code</button> 
+<button type="button" class="button-styling" onclick=window.location.href='https://ucsb-meds.github.io/customizing-quarto-websites/#/title-slide'>{{< fa tv title="A television screen" >}} slides</button>
+<button type="button" class="button-styling" onclick=window.location.href='https://github.com/UCSB-MEDS/customizing-quarto-websites'>{{< fa code title="A symbol for code, </>" >}} source code</button> 
 </div>
 </div>
 
