--- a/about.qmd
+++ b/about.qmd
@@ -1,7 +1,23 @@
 ---
 title: "about"
-subtitle: "~ a bit more about me outside of my job ~"
+subtitle: "~ a bit more about me both inside and outside of my job ~"
 ---
+
+## {{< fa chalkboard-teacher title="A teacher at a chalkboard" >}} the profession
+
+I'm the Data Training Coordinator at the [National Center for Ecological Analysis & Synthesis](https://www.nceas.ucsb.edu/) (NCEAS) located at UC Santa Barbara, where I'm working to develop and teach data science training curricula for the [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) (MEDS) program and other data science initiatives across NCEAS and UCSB. I am also a co-organizer of [R-Ladies Santa Barbara](https://www.meetup.com/rladies-santa-barbara/), a local data science group which works to promote gender diversity in the R community.
+
+My background is in marine ecology / ecophysiology -- I was afforded opportunities to study coral disease in Panama and the Florida Keys as an undergrad, then temperature effects on spiny lobster metabolism and foraging behavior in Santa Barbara for my Masters degree. Since the beginning of my time in STEM, I was totally terrified of all things data/coding/data science, but thanks to a super supportive community and some really rad colleagues/instructors, I found my new path in data science education and I absolutely *love* it.
+
+:::{.column-margin}
+```{r}
+#| echo: false
+#| fig-cap: "Teaching MEDS students how to build their own personal websites using Quarto! This was especially fun for me, since Quarto was still such a new tool when I first gave this workshop -- it meant a lot of discovery and learning on-the-fly alongside our students."
+knitr::include_graphics("images/teaching.jpeg")
+```
+:::
+
+I'm afforded a lot of flexibility in how I teach and what I teach. Primarily, I focus on developing and delivering workshop-style classes that supplement the [MEDS core curriculum](https://ucsb-meds.github.io/courses.html). I teach primarily via live-coding (where my computer is hooked up to a screen for workshop participants to see and hear me talk through code in real time as they follow along on their own computers) -- this teaching style was invaluable in my own development as a data scientist, and I really believe that, when done well, live-coding can be a game-changing experience for early-career coders and data scientists. I am always looking for new ways to make my teaching style and materials more approachable and inclusive for all learners -- I try to build [my materials](https://samanthacsik.github.io/talks_workshops.html) to be stand-alone resources both for participants to refer back to and also for those learning on their own time.
 
 ## {{< fa hiking title="A person with a backpack and trekking pole" >}} the hobby 
 
